--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
     <header>
@@ -19,13 +20,13 @@
       <ul>
         <li> Pseudo class</li>
         <li> Containers</li>
-        <li> 2D animations and interactive elements</li>
+        <li> </li>
         <li> multimedia on the website</li>
       </ul>
-      <img src="/uploads/2021/04/carousel-1684591_0_1618254197.svg" width="830px" height="550px"/>
+      <img src="https://learn.logika.asia/uploads/2021/04/carousel-1684591_0_1618254197.svg" width="830px" height="550px"/>
     </main>
     <footer>
-      <a class="social" href=""><img src="/uploads/2021/04/social1_0_1618254571.png" width="100px" height="100px"/></a>
+      <a class="social" href=""><img src="img/facebook.png" width="100px" height="100px"/></a>
       <a class="social" href=""><img src="/uploads/2021/04/Group%201_0_1618254571.png" width="100px" height="100px"/></a>
       <a class="social" href=""><img src="/uploads/2021/04/social3_0_1618254571.png" width="100px" height="100px"/></a>
     </footer>
