--- a/hello.html
+++ b/hello.html
@@ -2,6 +2,9 @@
   <head>
     <title>My Sites</title>
     <link rel="stylesheet" href="style.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -18,9 +21,9 @@
         <p>Bonus: <a class="link-text" href="https://translations-algo.github.io/wc-eng-m4l3/"><b>Website</b></a> of an eSports tournament</p>
     </main>
     <footer>
-      <a class="social" href=""><img src="https://learn.logika.asia/uploads/2021/04/social1_0_1618254571.png" width="100px" height="100px"/></a>
-      <a class="social" href=""><img src="https://learn.logika.asia/uploads/2021/04/Group%201_0_1618254571.png" width="100px" height="100px"/></a>
-      <a class="social" href=""><img src="https://learn.logika.asia/uploads/2021/04/social3_0_1618254571.png" width="100px" height="100px"/></a>
+      <a class="social" href=""><img src="img/facebook.png" width="100px" height="100px"/></a>
+      <a class="social" href=""><img src="img/youtube.png" width="100px" height="100px"/></a>
+      <a class="social" href=""><img src="img/gmail.png" width="100px" height="100px"/></a>
     </footer>
   </body>
 </html>
