--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
     </header>
     <main>
       <nav>
-        <a class="link-nav" href="hello.html"><b>About me</b></a>
+        <a class="link-nav" href="hello.html"><b>My Site</b></a>
         <a class="link-nav" href="hi.html"><b>Something</b></a>
       </nav>
       <h1>Things that<br/>I learned</h1>
       <ul>
-        <li> Pseudo class</li>
-        <li> Containers</li>
-        <li> </li>
-        <li> multimedia on the website</li>
+        <li> Pseudo class has focus, hover, visited, first-child, and last-child. There are also Pseudo elements such like before and after.</li>
+        <li> Blending colors, typing "background-image: linear-gradient(to right white red);" typing that can make the colors blend right to left, the colors will be white and red.</li>
+        <li> Transition, I type "transition:" to change colors when you hover it.</li>
+        <li> Shadow, I can put "box-shadow:" to make the shadow.</li>
       </ul>
       <img src="https://learn.logika.asia/uploads/2021/04/carousel-1684591_0_1618254197.svg" width="830px" height="550px"/>
     </main>
     <footer>
       <a class="social" href=""><img src="img/facebook.png" width="100px" height="100px"/></a>
-      <a class="social" href=""><img src="/uploads/2021/04/Group%201_0_1618254571.png" width="100px" height="100px"/></a>
-      <a class="social" href=""><img src="/uploads/2021/04/social3_0_1618254571.png" width="100px" height="100px"/></a>
+      <a class="social" href=""><img src="img/youtube.png" width="100px" height="100px"/></a>
+      <a class="social" href=""><img src="img/gmail.png" width="100px" height="100px"/></a>
     </footer>
   </body>
 </html>
