--- a/hi.html
+++ b/hi.html
@@ -2,6 +2,9 @@
   <head>
     <title>Useful information</title>
     <link rel="stylesheet" href="style.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -31,9 +34,9 @@
       <p>Online HTML/CSS editor <a  class="link-text" href="https://www.w3schools.com/tryit/"><b>w3schools</b></a></p>
     </main>
     <footer>
-      <a class="social" href=""><img src="/uploads/2021/04/social1_0_1618254571.png" width="100px" height="100px"/></a>
-      <a class="social" href=""><img src="/uploads/2021/04/Group%201_0_1618254571.png" width="100px" height="100px"/></a>
-      <a class="social" href=""><img src="/uploads/2021/04/social3_0_1618254571.png" width="100px" height="100px"/></a>
+      <a class="social" href=""><img src="img/facebook.png" width="100px" height="100px"/></a>
+      <a class="social" href=""><img src="img/youtube.png" width="100px" height="100px"/></a>
+      <a class="social" href=""><img src="img/gmail.png" width="100px" height="100px"/></a>
     </footer>
   </body>
 </html>
