--- a/hello.html
+++ b/hello.html
@@ -13,12 +13,11 @@
     <main>
       <h1>My Sites</h1>
       <p class="text-big"><b>from the Wix constructor to making pages with HTML and CSS</b></p>
-      <p><a class="link-text" href="https://asmartinel.wixsite.com/bigcatsite/"><b>Website</b></a> of a cattery consisting of several pages was assembled in Wix</p>
-        <p><a class="link-text" href="https://translations-algo.github.io/gameLab.html"><b>Website</b></a> of a game studio; the styles were written in the style attribute</p>
-        <p><a class="link-text" href="https://translations-algo.github.io/ws-eng-m4l4/"><b>Website</b></a> of a fireworks store; CSS selectors, file with styles</p>
-      <p><a class="link-text" href="https://www.figma.com/file/IPijLWHOj5PtZhxP4aHCEx/M5L4-Project?node-id=0%3A1"><b>Layout</b></a> of a multi-page website created in Figma</p>
-        <p><a class="link-text" href="https://translations-algo.github.io/ws-eng-m5l4-1/"><b>Website</b></a> of the Samoylov family; page making according to a layout, margins</p>
-        <p>Bonus: <a class="link-text" href="https://translations-algo.github.io/wc-eng-m4l3/"><b>Website</b></a> of an eSports tournament</p>
+      <p><a class="link-text" href="https://github.com/toast-cry/table"><b>BitMarket</b></a> My table of everyday life</p>
+        <p><a class="link-text" href="https://toast-cry.github.io/dinosaur/"><b>Dinosaur</b></a> Different types of Dinosaurs</p>
+        <p><a class="link-text" href="https://toast-cry.github.io/cooked/"><b>Table</b></a> Options to buy from BitMarket</p>
+      <p><a class="link-text" href="https://github.com/toast-cry/Skibidi"><b>Memory-card</b></a> <= from pyton</p>
+        <p><a class="link-text" href="https://github.com/toast-cry/Skibidi1"><b>shooter</b></a> <= from pyton</p>
     </main>
     <footer>
       <a class="social" href=""><img src="img/facebook.png" width="100px" height="100px"/></a>
