--- a/hi.html
+++ b/hi.html
@@ -15,7 +15,7 @@
       <h2>Tips for newbies</h2>
       <ol>
         <li>Use a header, the footer, and a main title</li>
-        <li>Add margins</li>
+        <li>Add margins/padding</li>
         <li>Select colors according to the сolor wheel</li>
         <li>Observe the symmetry</li>
         <li>Write the code clearly</li>
