--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <main>
       <nav>
         <a class="link-nav" href="hello.html"><b>My Site</b></a>
-        <a class="link-nav" href="hi.html"><b>Something</b></a>
+        <a class="link-nav" href="hi.html"><b>Use full infromation</b></a>
       </nav>
       <h1>Things that<br/>I learned</h1>
       <ul>
         <li> Pseudo class has focus, hover, visited, first-child, and last-child. There are also Pseudo elements such like before and after.</li>
-        <li> Blending colors, typing "background-image: linear-gradient(to right white red);" typing that can make the colors blend right to left, the colors will be white and red.</li>
-        <li> Transition, I type "transition:" to change colors when you hover it.</li>
-        <li> Shadow, I can put "box-shadow:" to make the shadow.</li>
+        <li> Blending colors.</li>
+        <li> Transition: Changes colors when you hover it.</li>
+        <li> bo-shadow makes a shadow.</li>
       </ul>
       <img src="https://learn.logika.asia/uploads/2021/04/carousel-1684591_0_1618254197.svg" width="830px" height="550px"/>
     </main>
